tests/conformance/negative/bad_ffi_lib.afr
// Unknown FFI library must be rejected (secure mode, no allow).
extern from "not_a_real_ffi_lib_xyz" function evil() returns number
say evil()
